Reprise de l'exemple

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,74 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.metadata/.lock
+.metadata/.plugins/org.eclipse.debug.core/.launches/HelloWorld.launch
+.metadata/.plugins/org.eclipse.debug.core/.launches/Main.launch
+.metadata/.plugins/org.eclipse.debug.ui/dialog_settings.xml
+.metadata/.plugins/org.eclipse.debug.ui/launchConfigurationHistory.xml
+.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+.metadata/.plugins/org.eclipse.equinox.p2.ui.importexport/dialog_settings.xml
+.metadata/.plugins/org.eclipse.equinox.p2.ui/dialog_settings.xml
+.metadata/.plugins/org.eclipse.jdt.core/1149536767.index
+.metadata/.plugins/org.eclipse.jdt.core/2127469400.index
+.metadata/.plugins/org.eclipse.jdt.core/2159126994.index
+.metadata/.plugins/org.eclipse.jdt.core/2198347109.index
+.metadata/.plugins/org.eclipse.jdt.core/2589249318.index
+.metadata/.plugins/org.eclipse.jdt.core/2609906642.index
+.metadata/.plugins/org.eclipse.jdt.core/3211341389.index
+.metadata/.plugins/org.eclipse.jdt.core/327709954.index
+.metadata/.plugins/org.eclipse.jdt.core/3490783068.index
+.metadata/.plugins/org.eclipse.jdt.core/3529709901.index
+.metadata/.plugins/org.eclipse.jdt.core/382420514.index
+.metadata/.plugins/org.eclipse.jdt.core/3915777303.index
+.metadata/.plugins/org.eclipse.jdt.core/4069222841.index
+.metadata/.plugins/org.eclipse.jdt.core/408491271.index
+.metadata/.plugins/org.eclipse.jdt.core/4145708449.index
+.metadata/.plugins/org.eclipse.jdt.core/4289993343.index
+.metadata/.plugins/org.eclipse.jdt.core/542094340.index
+.metadata/.plugins/org.eclipse.jdt.core/686558168.index
+.metadata/.plugins/org.eclipse.jdt.core/722281304.index
+.metadata/.plugins/org.eclipse.jdt.core/891809560.index
+.metadata/.plugins/org.eclipse.jdt.core/assumedExternalFilesCache
+.metadata/.plugins/org.eclipse.jdt.core/externalFilesCache
+.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
+.metadata/.plugins/org.eclipse.jdt.core/indexNamesMap.txt
+.metadata/.plugins/org.eclipse.jdt.core/invalidArchivesCache
+.metadata/.plugins/org.eclipse.jdt.core/javaLikeNames.txt
+.metadata/.plugins/org.eclipse.jdt.core/nonChainingJarsCache
+.metadata/.plugins/org.eclipse.jdt.core/savedIndexNames.txt
+.metadata/.plugins/org.eclipse.jdt.core/variablesAndContainers.dat
+.metadata/.plugins/org.eclipse.jdt.debug.ui/dialog_settings.xml
+.metadata/.plugins/org.eclipse.jdt.launching/.install.xml
+.metadata/.plugins/org.eclipse.jdt.launching/libraryInfos.xml
+.metadata/.plugins/org.eclipse.jdt.ui/OpenTypeHistory.xml
+.metadata/.plugins/org.eclipse.jdt.ui/QualifiedTypeNameHistory.xml
+.metadata/.plugins/org.eclipse.jdt.ui/dialog_settings.xml
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/1/3/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/1/3/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/1/4/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/1/4/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/1/5/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/1/5/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/2/6/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/2/6/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/2/7/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/2/7/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/2/8/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2015/2/8/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/2048-1.7 - Anthony/2015/1/3/refactorings.history
+.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_a.nrm
+.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_a.prx
+.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_a.tii
+.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/_a.tis
+.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/segments.gen
+.recommenders/index/http___download_eclipse_org_recommenders_models_luna_/segments_b
+.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/_remote.repositories
+.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/jre-1.0.0-20140604.182326-1-call.zip
+.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/maven-metadata-models.xml
+.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/jre/jre/1.0.0-SNAPSHOT/resolver-status.properties
+.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/_remote.repositories
+.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/index-0.0.0-20140605.014212-1.zip
+.recommenders/repository/http___download_eclipse_org_recommenders_models_luna_/org/eclipse/recommenders/index/0.0.0-SNAPSHOT/maven-metadata-models.xml
+.metadata/
+.recommenders/
